k8s/ingress/ingress-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  backend:
    serviceName: orchestrator-ruby
    servicePort: 80
  rules:
  - host: k8s-dreams-staging
    http:
      paths:
      - path: /*
        backend:
          serviceName: orchestrator-ruby
          servicePort: 80
